Width issue fixed on small screens

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,7 +9,8 @@
   z-index: 10;
   border-bottom: 1px solid black;
   padding: 0 !important;
-  min-width: calc(100% - 22rem);
+  width: 100vw;
+  max-width: 144rem;
 }
 
 .navbar .navbar-collapse {
